oc/dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  generation: 1
  labels:
    app: toeggeliservice
  name: toeggeliservice
spec:
  replicas: 1
  selector:
    app: toeggeliservice
    deploymentconfig: toeggeliservice
  strategy:
    activeDeadlineSeconds: 21600
    resources:
      limits:
        cpu: "2"
        memory: 1G
      requests:
        cpu: 500m
        memory: 500M
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: toeggeliservice
        deploymentconfig: toeggeliservice
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: int
        image: 172.26.17.1:5000/rch-toeggeli-int/toeggeliservice:latest
        imagePullPolicy: Always
        name: toeggeliservice
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 1G
          requests:
            cpu: 500m
            memory: 500M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: false
      containerNames:
      - toeggeliservice
      from:
        kind: ImageStreamTag
        name: toeggeliservice:latest
        namespace: rch-toeggeli-int
    type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
