oc/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: toeggeliservice
  name: toeggeliservice
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: toeggeliservice
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
